RESOLVED FIXED147028
iOS TextIndicators include text that is not supposed to be indicated
https://bugs.webkit.org/show_bug.cgi?id=147028
Summary iOS TextIndicators include text that is not supposed to be indicated
Tim Horton
Reported 2015-07-16 19:19:34 PDT
iOS TextIndicators include text that is not supposed to be indicated
Attachments
Patch (11.20 KB, patch)
2015-07-16 19:21 PDT, Tim Horton
no flags
Patch (9.98 KB, patch)
2015-07-17 05:25 PDT, Tim Horton
sam: review+
Tim Horton
Comment 1 2015-07-16 19:21:16 PDT
Tim Horton
Comment 2 2015-07-17 05:25:55 PDT
Tim Horton
Comment 3 2015-07-17 11:26:22 PDT
Note You need to log in before you can comment on or make changes to this bug.