Source/WebCore/rendering/PaintPhase.h
@@ -62,6 +62,7 @@ enum PaintBehaviorFlags {
     PaintBehaviorRenderingSVGMask = 1 << 4,
     PaintBehaviorSkipRootBackground = 1 << 5,
     PaintBehaviorRootBackgroundOnly = 1 << 6,
+    PaintBehaviorSelectionAndBackgroundsOnly = 1 << 7,
 };
 
 typedef unsigned PaintBehavior;
